fix alignment header

--- a/src/customStyles/businessStyle/businessHeader.css
+++ b/src/customStyles/businessStyle/businessHeader.css
@@ -1,4 +1,4 @@
-.headerContainer {
+/* .headerContainer {
     background-image: url('../../images/headerSmall.png');
     background-size: cover;
     background-position: center;
@@ -251,4 +251,4 @@
     }
 
     
-}
+} */
